@@ -893,12 +893,44 @@ class VerifyCommand(ConaryCommand):
         verify.verify(troves, db, cfg, all=all)
 _register(VerifyCommand)
 
+def _getPreCommandOptions(argv, cfg):
+    """Allow the user to specify generic flags before they specify the
+       command to run.
+    """
+    cfgMap = {}
+    params = {}
+    thisCommand = ConaryCommand()
+    thisCommand.addParameters(params)
+    thisCommand.addConfigOptions(cfgMap, params)
+    thisCommand.addDocs(params)
+    defaultGroup = thisCommand.defaultGroup
+    argSet, otherArgs, parser, optionSet = options._processArgs(
+                                                params, {}, cfg,
+                                                usage,
+                                                argv=argv[1:],
+                                                version=constants.version,
+                                                useHelp=True,
+                                                defaultGroup=defaultGroup,
+                                                interspersedArgs=False)
+    return argSet, [argv[0]] + otherArgs
+
+
 def realMain(cfg, argv=sys.argv):
     cfgMap = {}
 
     if '--version' in argv or '-v' in argv:
         print constants.version
         return
+
+    try:
+        # get options before the command.  Only generic options are 
+        # allowed.
+        argSet, argv = _getPreCommandOptions(argv, cfg)
+    except options.OptionError, e:
+        usage()
+        print >> sys.stderr, e
+        sys.exit(e.val)
+
     if len(argv) < 2:
         # no command specified
         return usage()
@@ -909,7 +941,6 @@ def realMain(cfg, argv=sys.argv):
     if commandName not in supportedCommands:
         return usage()
     
-    commonParams = {}
     params = {}
     thisCommand = supportedCommands[commandName]
     thisCommand.addParameters(params)
@@ -920,7 +951,7 @@ def realMain(cfg, argv=sys.argv):
     commandUsage = 'conary %s %s' % (commandName, thisCommand.paramHelp)
 
     try:
-        argSet, otherArgs, parser, optionSet = options._processArgs(
+        newArgSet, otherArgs, parser, optionSet = options._processArgs(
                                                     params, {}, cfg,
                                                     commandUsage,
                                                     argv=argv,
@@ -928,11 +959,14 @@ def realMain(cfg, argv=sys.argv):
                                                     useHelp=True,
                                                     defaultGroup=defaultGroup)
     except options.OptionError, e:
+        e.parser.print_help()
         print >> sys.stderr, e
         sys.exit(e.val)
     except versions.ParseError, e:
         print >> sys.stderr, e
         sys.exit(1)
+
+    argSet.update(newArgSet)
 
     thisCommand.processConfigOptions(cfg, cfgMap, argSet)
 
